--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=postgresql://postgres:123456@localhost:5432/prisma_top_users
+
+#BD desplegada: 
+#BD local: postgresql://postgres:123456@localhost:5432/prisma_top_users
